--- a/static/css/post.less
+++ b/static/css/post.less
@@ -125,12 +125,17 @@
                     consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <aside class="post_inset line-container">
-                    <div class="line-container_body">
-                        <p class="pull-quote">
+                    <div class="line-container_body pull-quote">
+                        <div class="pull-quote_body">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Cum corrupti tempora nam nihil qui mollitia consectetur
                             corporis nemo culpa dolorum!
-                        </p>
+                        </div>
+                        <footer>
+                            <cite class="pull-quote_citation">
+                                - Author Name
+                            </cite>
+                        </footer>
                     </div>
                 </aside>
                 <p>
