--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -92,7 +92,7 @@
     - name: Default category slug
       markup: |
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-credit-card"></i>
+            <span class="cf-icon cf-icon-credit-card"></span>
             Consumer finance
         </a>
       notes:
@@ -153,7 +153,7 @@
                 Nov 4, 2013
             </span>
             <a href="#" class="meta-header_left category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
                 Consumer finance
             </a>
         </div>
@@ -176,7 +176,7 @@
       markup: |
         <div class="meta-header">
             <a href="#" class="meta-header_right category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
             </a>
             <span class="meta-header_left date">
                 Nov 4, 2013
@@ -185,7 +185,7 @@
         <br>
         <div class="meta-header">
             <a href="#" class="meta-header_left category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
                 Consumer finance
             </a>
         </div>
