--- a/static/css/post.less
+++ b/static/css/post.less
@@ -13,7 +13,7 @@
         <article class="post">
             <header>
                 <a href="#" class="post_slug category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Announcements &amp; updates
                 </a>
                 <h1 class="post_header">
@@ -30,25 +30,25 @@
                 <ul class="post_share list__horizontal">
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-email-social-square"></i>
+                            <span class="cf-icon cf-icon-email-social-square"></span>
                             <span class="visually-hidden">Share by email</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-facebook-square"></i>
+                            <span class="cf-icon cf-icon-facebook-square"></span>
                             <span class="visually-hidden">Share on Facebook</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-twitter-square"></i>
+                            <span class="cf-icon cf-icon-twitter-square"></span>
                             <span class="visually-hidden">Share on Twitter</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-linkedin-square"></i>
+                            <span class="cf-icon cf-icon-linkedin-square"></span>
                             <span class="visually-hidden">Share on LinkedIn</span>
                         </a>
                     </li>
@@ -88,7 +88,7 @@
                             </li>
                             <li class="list_item">
                                 <a class="list_link" href="#">
-                                    PDF <i class="cf-icon cf-icon-pdf"></i>
+                                    PDF <span class="cf-icon cf-icon-pdf"></span>
                                 </a>
                             </li>
                         </ul>
@@ -113,7 +113,7 @@
                             </li>
                             <li class="list_item">
                                 <a class="list_link" href="#">
-                                    PDF <i class="cf-icon cf-icon-pdf"></i>
+                                    PDF <span class="cf-icon cf-icon-pdf"></span>
                                 </a>
                             </li>
                         </ul>
