--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -12,7 +12,7 @@
       markup: |
         <h1>
             <a href="#">
-                <i class="cf-icon cf-icon-twitter-square"></i>
+                <span class="cf-icon cf-icon-twitter-square"></span>
                 <span class="visually-hidden">Share by email</span>
             </a>
         </h1>
