--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -11,19 +11,19 @@
     - name: Blog slugs
       markup: |
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Announcements & updates
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Consumer information
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Engagement
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Innovation & data
         </a>
       notes:
@@ -55,7 +55,7 @@
                     Nov 4, 2013
                 </span>
                 <a href="#" class="meta-header_left category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Consumer information
                 </a>
             </div>
@@ -85,7 +85,7 @@
                     Nov 4, 2013
                 </span>
                 <a href="#" class="meta-header_left category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Consumer information
                 </a>
             </div>
