--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4007,7 +4007,7 @@ img {
       markup: |
         <h1>
             <a href="#">
-                <i class="cf-icon cf-icon-twitter-square"></i>
+                <span class="cf-icon cf-icon-twitter-square"></span>
                 <span class="visually-hidden">Share by email</span>
             </a>
         </h1>
@@ -4418,7 +4418,7 @@ img {
     - name: Default category slug
       markup: |
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-credit-card"></i>
+            <span class="cf-icon cf-icon-credit-card"></span>
             Consumer finance
         </a>
       notes:
@@ -4524,7 +4524,7 @@ img {
                 Nov 4, 2013
             </span>
             <a href="#" class="meta-header_left category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
                 Consumer finance
             </a>
         </div>
@@ -4547,7 +4547,7 @@ img {
       markup: |
         <div class="meta-header">
             <a href="#" class="meta-header_right category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
             </a>
             <span class="meta-header_left date">
                 Nov 4, 2013
@@ -4556,7 +4556,7 @@ img {
         <br>
         <div class="meta-header">
             <a href="#" class="meta-header_left category-slug">
-                <i class="cf-icon cf-icon-credit-card"></i>
+                <span class="cf-icon cf-icon-credit-card"></span>
                 Consumer finance
             </a>
         </div>
@@ -4739,7 +4739,7 @@ img {
     - name: Default example
       markup: |
         <a class="share-icon" href="#">
-            <i class="cf-icon cf-icon-email-social-square"></i>
+            <span class="cf-icon cf-icon-email-social-square"></span>
             <span class="visually-hidden">
                 Share by email
             </span>
@@ -4904,7 +4904,7 @@ img {
         <article class="post">
             <header>
                 <a href="#" class="post_slug category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Announcements &amp; updates
                 </a>
                 <h1 class="post_header">
@@ -4921,25 +4921,25 @@ img {
                 <ul class="post_share list__horizontal">
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-email-social-square"></i>
+                            <span class="cf-icon cf-icon-email-social-square"></span>
                             <span class="visually-hidden">Share by email</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-facebook-square"></i>
+                            <span class="cf-icon cf-icon-facebook-square"></span>
                             <span class="visually-hidden">Share on Facebook</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-twitter-square"></i>
+                            <span class="cf-icon cf-icon-twitter-square"></span>
                             <span class="visually-hidden">Share on Twitter</span>
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="share-icon" href="#">
-                            <i class="cf-icon cf-icon-linkedin-square"></i>
+                            <span class="cf-icon cf-icon-linkedin-square"></span>
                             <span class="visually-hidden">Share on LinkedIn</span>
                         </a>
                     </li>
@@ -4979,7 +4979,7 @@ img {
                             </li>
                             <li class="list_item">
                                 <a class="list_link" href="#">
-                                    PDF <i class="cf-icon cf-icon-pdf"></i>
+                                    PDF <span class="cf-icon cf-icon-pdf"></span>
                                 </a>
                             </li>
                         </ul>
@@ -5004,7 +5004,7 @@ img {
                             </li>
                             <li class="list_item">
                                 <a class="list_link" href="#">
-                                    PDF <i class="cf-icon cf-icon-pdf"></i>
+                                    PDF <span class="cf-icon cf-icon-pdf"></span>
                                 </a>
                             </li>
                         </ul>
@@ -5563,19 +5563,19 @@ a.focus .summary_header {
     - name: Blog slugs
       markup: |
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Announcements & updates
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Consumer information
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Engagement
         </a><br>
         <a href="#" class="category-slug">
-            <i class="cf-icon cf-icon-help"></i>
+            <span class="cf-icon cf-icon-help"></span>
             Innovation & data
         </a>
       notes:
@@ -5606,7 +5606,7 @@ a.focus .summary_header {
                     Nov 4, 2013
                 </span>
                 <a href="#" class="meta-header_left category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Consumer information
                 </a>
             </div>
@@ -5636,7 +5636,7 @@ a.focus .summary_header {
                     Nov 4, 2013
                 </span>
                 <a href="#" class="meta-header_left category-slug">
-                    <i class="cf-icon cf-icon-help"></i>
+                    <span class="cf-icon cf-icon-help"></span>
                     Consumer information
                 </a>
             </div>
