--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -149,7 +149,7 @@
     - name: Default example
       markup: |
         <a class="share-icon" href="#">
-            <i class="cf-icon cf-icon-email-social-square"></i>
+            <span class="cf-icon cf-icon-email-social-square"></span>
             <span class="visually-hidden">
                 Share by email
             </span>
