Updates headers for tags and inset links.

--- a/static/css/post.less
+++ b/static/css/post.less
@@ -196,7 +196,7 @@
                 <aside class="post_inset line-container">
                     <h2 class="line-container_pullup header-slug">
                         <span class="header-slug_inner">
-                            Further reading
+                            More information
                         </span>
                     </h2>
                     <div class="line-container_body">
@@ -295,7 +295,7 @@
             </div>
             <footer>
                 <div class="tags">
-                    <h4 class="tags_header">Tags:</h4>
+                    <h4 class="tags_header">Topics:</h4>
                     <ul class="tags_list">
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
