--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4537,7 +4537,7 @@ img {
                 <aside class="post_inset line-container">
                     <h2 class="line-container_pullup header-slug">
                         <span class="header-slug_inner">
-                            Further reading
+                            More information
                         </span>
                     </h2>
                     <div class="line-container_body">
@@ -4636,7 +4636,7 @@ img {
             </div>
             <footer>
                 <div class="tags">
-                    <h4 class="tags_header">Tags:</h4>
+                    <h4 class="tags_header">Topics:</h4>
                     <ul class="tags_list">
                         <li class="tags_tag">
                             <a href="#" class="tags_link">
